Bug 85377 - lp_test_format failure with llvm-3.6
Summary: lp_test_format failure with llvm-3.6
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: have-backtrace
Depends on:
Blocks:
 
Reported: 2014-10-23 17:52 UTC by Vinson Lee
Modified: 2014-10-25 09:06 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-10-23 17:52:04 UTC
mesa: bbe93161e7781c303de7d83bc601601f675b56f9 (master 10.4.0-devel)

$ ./build/linux-x86_64-debug/bin/lp_test_format 
Testing PIPE_FORMAT_B8G8R8A8_UNORM (float) ...
Testing PIPE_FORMAT_B8G8R8A8_UNORM (unorm8) ...
Testing PIPE_FORMAT_B8G8R8X8_UNORM (float) ...
Testing PIPE_FORMAT_B8G8R8X8_UNORM (unorm8) ...
Testing PIPE_FORMAT_A8R8G8B8_UNORM (float) ...
Testing PIPE_FORMAT_A8R8G8B8_UNORM (unorm8) ...
Testing PIPE_FORMAT_X8R8G8B8_UNORM (float) ...
Testing PIPE_FORMAT_X8R8G8B8_UNORM (unorm8) ...
Testing PIPE_FORMAT_B5G5R5A1_UNORM (float) ...
Testing PIPE_FORMAT_B5G5R5A1_UNORM (unorm8) ...
Testing PIPE_FORMAT_B4G4R4A4_UNORM (float) ...
Testing PIPE_FORMAT_B4G4R4A4_UNORM (unorm8) ...
Testing PIPE_FORMAT_B5G6R5_UNORM (float) ...
Testing PIPE_FORMAT_B5G6R5_UNORM (unorm8) ...
Testing PIPE_FORMAT_R10G10B10A2_UNORM (float) ...
Testing PIPE_FORMAT_R10G10B10A2_UNORM (unorm8) ...
Testing PIPE_FORMAT_L8_UNORM (float) ...
Testing PIPE_FORMAT_L8_UNORM (unorm8) ...
Testing PIPE_FORMAT_A8_UNORM (float) ...
Testing PIPE_FORMAT_A8_UNORM (unorm8) ...
Testing PIPE_FORMAT_I8_UNORM (float) ...
Testing PIPE_FORMAT_I8_UNORM (unorm8) ...
Testing PIPE_FORMAT_L8A8_UNORM (float) ...
Testing PIPE_FORMAT_L8A8_UNORM (unorm8) ...
Testing PIPE_FORMAT_L16_UNORM (float) ...
Testing PIPE_FORMAT_L16_UNORM (unorm8) ...
Testing PIPE_FORMAT_UYVY (float) ...
Testing PIPE_FORMAT_UYVY (unorm8) ...
Testing PIPE_FORMAT_YUYV (float) ...
Testing PIPE_FORMAT_YUYV (unorm8) ...
Testing PIPE_FORMAT_R32_FLOAT (float) ...
Testing PIPE_FORMAT_R32_FLOAT (unorm8) ...
Testing PIPE_FORMAT_R32G32_FLOAT (float) ...
Testing PIPE_FORMAT_R32G32_FLOAT (unorm8) ...
Testing PIPE_FORMAT_R32G32B32_FLOAT (float) ...
Testing PIPE_FORMAT_R32G32B32_FLOAT (unorm8) ...
Testing PIPE_FORMAT_R32G32B32A32_FLOAT (float) ...
Segmentation fault (core dumped)

(gdb) bt
#0  0x00007ffff7ff7004 in ?? ()
#1  0x00007fffffffe2c0 in ?? ()
#2  0x0000000000457334 in test_format_float (verbose=0, fp=0x1a89a98, desc=0x1a89a10) at src/gallium/drivers/llvmpipe/lp_test_format.c:168
Backtrace stopped: frame did not save the PC
(gdb) frame 2
#2  0x0000000000457334 in test_format_float (verbose=0, fp=0x1a89a98, desc=0x1a89a10) at src/gallium/drivers/llvmpipe/lp_test_format.c:168
168	               fetch_ptr(unpacked, test->packed, j, i);
(gdb) print test
$1 = (const struct util_format_test_case *) 0x0
Comment 1 Vinson Lee 2014-10-25 09:06:13 UTC
commit 701f739d7fa1bc2d56dac41ac1f7f3ec8969544d
Author: José Fonseca <jfonseca@vmware.com>
Date:   Fri Oct 24 20:27:31 2014 +0100

    llvmpipe: Ensure the packed input of the lp_test_format is aligned.
    
    Fixes:
    - https://bugs.freedesktop.org/show_bug.cgi?id=85377
    - http://llvm.org/bugs/show_bug.cgi?id=21365
    
    Reviewed-by: Roland Scheidegger <sroland@vmware.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.